# arc

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  install.sh  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.base.json
.github/workflows/: ci.yml  deploy-web-client.yml  publish-npm.yml  publish-pypi.yml
docs/: api-contracts.md
hermes-plugin/arc-remote-control/: __init__.py  plugin.yaml
hermes-plugin/tests/: conftest.py  test_e2e.py  test_reconnect.py
relay/: Dockerfile  __init__.py  __main__.py  beta_app.py  defaults.py  models.py  protocols.py  relay.py
relay/tests/: conftest.py  test_prefix_auth.py  test_relay.py
tests/: test_api_contracts.py  test_hosted_integration.py  test_websocket_relay.py
