[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-relay"
dynamic = ["version"]
description = "ARC Relay — WebSocket relay server for agent remote control by Axolotl AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ARC Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "starlette[full]>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/axolotl-ai-cloud/arc"
Repository = "https://github.com/axolotl-ai-cloud/arc"
Issues = "https://github.com/axolotl-ai-cloud/arc/issues"

[tool.setuptools.packages.find]
include = ["relay*"]

[tool.setuptools_scm]
# Version derived from git tags (e.g., v0.2.0 → 0.2.0)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "relay/tests"]
